# pisama-agent-sdk

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/pisama_agent_sdk/: __init__.py  bridge.py  check.py  config.py  converter.py  evaluator.py  session.py  tools.py  types.py
src/pisama_agent_sdk/hooks/: __init__.py  matchers.py  post_tool_use.py  pre_tool_use.py
tests/: __init__.py  test_bridge.py
