[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-agent-sdk"
version = "0.1.0"
description = "Claude Agent SDK integration for MAO detection - real-time failure prevention via hooks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PISAMA Team" }
]
keywords = ["claude", "agent", "sdk", "detection", "hooks", "mao"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pisama-core>=0.1.0",
]

[project.optional-dependencies]
evaluator = [
    "httpx>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pisama_agent_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
